fix ID will be visibel just in testQA at modal, fix daily to Daily, placeholder search bar, 3 images for each type of room

--- a/client_side/assets/css/style.scss
+++ b/client_side/assets/css/style.scss
@@ -776,6 +776,7 @@ header {
 
         .property-image {
           width: 100%;
+          height: 250px;
           object-fit: cover;
           border-radius: 5px;
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -1237,6 +1238,7 @@ header {
 
         .property-image {
           width: 100%;
+          height: 250px;
           object-fit: cover;
           border-radius: 5px;
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
